Migration to Java 21, Boot 3.5